--- a/example.html
+++ b/example.html
@@ -48,13 +48,13 @@
 var $ = function(s){
   return document.getElementById(s)
 }
-var nav = new pageNavigator()
+var nav = new PageNavigator()
 $('c-0-0').innerHTML = nav.create(1, 5)
 $('c-0-1').innerHTML = nav.create(5, 5)
 $('c-0-2').innerHTML = nav.create(3, 10)
 $('c-0-3').innerHTML = nav.create(15, 100)
 
-var nav2 = new pageNavigator({
+var nav2 = new PageNavigator({
   linkHelper: function(page){
     return 'list.html?page=' + page
   },
