--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
     .nav{
       margin: 10px 0;
       font-size: 12px;
-      font-family: "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", "Lucida Grande", sans-serif;
+      font-family: "Helvetica", "Arial", sans-serif;
     }
     .nav a{
       text-decoration: none;
@@ -21,51 +21,34 @@
       padding: 3px 8px;
       margin: 0 3px;
     }
-    .nav .number:hover{
+    .nav a.number:hover{
       background: #99dddd;
       color: #ffffff;
     }
-    .nav .current{
+    .nav span.current{
       background: #9cc;
       color: #fff;
     }
-    .nav .prev:hover, .nav .next:hover{
+    .nav a.prev:hover, .nav a.next:hover{
       color: #9cc;
+    }
+    h2{
+      margin-top: 2em;
     }
   </style>
 </head>
 <body>
-<h3>basic</h3>
+<h3>基本</h3>
 <div id="c-0-0" class="nav"></div>
 <div id="c-0-1" class="nav"></div>
 <div id="c-0-2" class="nav"></div>
 <div id="c-0-3" class="nav"></div>
-<h3>设置文字和链接</h3>
+<h3>设置</h3>
 <div id="c-1" class="nav"></div>
-<script type="text/javascript" src="page-navigator.js"></script>
-<script type="text/javascript">
-var $ = function(s){
-  return document.getElementById(s)
-}
-var nav = new PageNavigator()
-$('c-0-0').innerHTML = nav.create(1, 5)
-$('c-0-1').innerHTML = nav.create(5, 5)
-$('c-0-2').innerHTML = nav.create(3, 10)
-$('c-0-3').innerHTML = nav.create(15, 100)
+<h3>自定义 helper</h3>
+<div id="c-2" class="nav"></div>
 
-var nav2 = new PageNavigator({
-  linkHelper: 'list.html?page={{page}}',
-  // or:
-  // linkHelper: function(page) {
-  //   return 'list.html?page=' + page
-  // }
-  prevText: '←',
-  nextText: '→',
-  moreText: '......',
-  size: 9
-})
-$('c-1').innerHTML = nav2.create(4, 14)
+<script type="text/javascript" src="require.js" data-main="test.js" ></script>
 
-</script>
 </body>
 </html>
