--- a/example.html
+++ b/example.html
@@ -48,7 +48,33 @@
 <h3>自定义 helper</h3>
 <div id="c-2" class="nav"></div>
 
-<script type="text/javascript" src="require.js" data-main="test.js" ></script>
+<script type="text/javascript" src="pagenavigator.js"></script>
+<script type="text/javascript">
+  var $ = function(s){
+    return document.getElementById(s)
+  }
+  var nav = new PageNavigator()
+  $('c-0-0').innerHTML = nav.create(1, 5)
+  $('c-0-1').innerHTML = nav.create(5, 5)
+  $('c-0-2').innerHTML = nav.create(3, 10)
+  $('c-0-3').innerHTML = nav.create(15, 100)
+
+  var nav2 = new PageNavigator({
+    linkHelper: 'list.html?page={{page}}&from={{current}}&max={{max}}',
+    prevText: '←',
+    nextText: '→',
+    moreText: '……',
+    size: 9,
+    numberHelper: '<a href="{{link}}" class="item number ui-nav" data-page="{{page}}">{{page}}</a>'
+  })
+  $('c-1').innerHTML = nav2.create(4, 14)
+
+  var nav3 = new PageNavigator({
+    numberHelper: '<button href="{{link}}" class="item number" data-page="{{page}}">{{page}}</button>',
+    currentHelper: '<button class="item number current" data-page="{{page}}" disabled="disabled">{{page}}</button>'
+  })
+  $('c-2').innerHTML = nav3.create(10, 20)
+</script>
 
 </body>
 </html>
